--- a/StatisticsModule/StatisticsModule.csproj
+++ b/StatisticsModule/StatisticsModule.csproj
@@ -104,14 +104,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO\RecordDTO.cs" />
+    <Compile Include="DTO\ScheduleStatisticsCell.cs" />
+    <Compile Include="DTO\ScheduleStatisticsRow.cs" />
+    <Compile Include="DTO\VisitDTO.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Implementations\StatisticsService.cs" />
     <Compile Include="Services\Interfaces\IStatisticsService.cs" />
+    <Compile Include="ViewModels\ScheduleStatisticsViewModel.cs" />
     <Compile Include="ViewModels\RecordViewModel.cs" />
     <Compile Include="ViewModels\RecordsStatisticsViewModel.cs" />
     <Compile Include="ViewModels\StatisticsEmptyViewModel.cs" />
     <Compile Include="ViewModels\StatisticsHeaderViewModel.cs" />
+    <Compile Include="Views\ScheduleStatisticsView.xaml.cs">
+      <DependentUpon>ScheduleStatisticsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\RecordsStatisticsView.xaml.cs">
       <DependentUpon>RecordsStatisticsView.xaml</DependentUpon>
     </Compile>
@@ -124,6 +131,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\ScheduleStatisticsView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
