--- a/StatisticsModule/StatisticsModule.csproj
+++ b/StatisticsModule/StatisticsModule.csproj
@@ -103,6 +103,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\RoomScheduleDTO.cs" />
     <Compile Include="DTO\RecordDTO.cs" />
     <Compile Include="DTO\ScheduleStatisticsCell.cs" />
     <Compile Include="DTO\ScheduleStatisticsRow.cs" />
@@ -111,11 +112,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Implementations\StatisticsService.cs" />
     <Compile Include="Services\Interfaces\IStatisticsService.cs" />
+    <Compile Include="ViewModels\RoomCapacityStatisticsViewModel.cs" />
     <Compile Include="ViewModels\ScheduleStatisticsViewModel.cs" />
     <Compile Include="ViewModels\RecordViewModel.cs" />
     <Compile Include="ViewModels\RecordsStatisticsViewModel.cs" />
     <Compile Include="ViewModels\StatisticsEmptyViewModel.cs" />
     <Compile Include="ViewModels\StatisticsHeaderViewModel.cs" />
+    <Compile Include="Views\RoomCapacityStatisticsView.xaml.cs">
+      <DependentUpon>RoomCapacityStatisticsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ScheduleStatisticsView.xaml.cs">
       <DependentUpon>ScheduleStatisticsView.xaml</DependentUpon>
     </Compile>
@@ -131,6 +136,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\RoomCapacityStatisticsView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
