--- a/UserMessageModule/UserMessageModule.csproj
+++ b/UserMessageModule/UserMessageModule.csproj
@@ -90,9 +90,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Misc\OpenUserMessageEventData.cs" />
     <Compile Include="Misc\OpenUserMessageEvent.cs" />
     <Compile Include="Module.cs" />
-    <Compile Include="ModuleStrings.cs" />
+    <Compile Include="Misc\ModuleStrings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Implementations\UserMessageService.cs" />
     <Compile Include="Services\Interfaces\IUserMessageService.cs" />
