--- a/UserMessageModule/App.config
+++ b/UserMessageModule/App.config
@@ -10,4 +10,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Prism" publicKeyToken="91a96d2a154366d8" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.2.0.0" newVersion="6.2.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ControlzEx" publicKeyToken="f08b075e934b7045" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.4.13" newVersion="2.1.4.13" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
